# netprobe

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/netprobe/: __main__.py  cli.py
src/netprobe/output/: formatter.py
src/netprobe/scanner/: __init__.py  tcp.py  utils.py
src/netprobe/sniffer/: __init__.py  capture.py  parser.py
tests/: test_cli.py  test_parser.py  test_scanner.py
