[project]
name = "netprobe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[project.scripts]
netprobe = "netprobe.cli:main"

[tool.uv]
package = true